agregar tutorial a la vista

--- a/src/app/hello-world/hello-world.component.html
+++ b/src/app/hello-world/hello-world.component.html
@@ -1,2 +1,10 @@
 <h1>Hello World</h1>
+
+<p>
+1) Eliminare la documentacion de "app.component.html"
+2) Para esta prueba creare un componente utilizando Angular CLI (ng g c "hello-world") el cual genera un componente.
+3) Modificare el archivo "hello-world.component.html" y "hello-world.component.ts" para mostrar el mensaje Hola mundo de forma directa y utilizand la interpolacion.  
+4) Por ultimo agregare al "app.component.html" el nombre del componente "hello-world".
+</p>
+
 {{ 'Utilizando la Interpolacion: ' + message}}
