--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -12,7 +12,13 @@
           <a class="nav-link" href="interpolation">Interpolation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+          <a class="nav-link" href="property-binding">Property Binding</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="interpolation">Interpolation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="interpolation">Interpolation</a>
         </li>
       </ul>
     </div>
