--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -15,10 +15,10 @@
           <a class="nav-link" href="property-binding">Property Binding</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="interpolation">Interpolation</a>
+          <a class="nav-link" href="class-binding">Class Binding</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="interpolation">Interpolation</a>
+          <a class="nav-link" href="style-binding">Style Binding</a>
         </li>
       </ul>
     </div>
