--- a/src/app/property-binding/property-binding.component.html
+++ b/src/app/property-binding/property-binding.component.html
@@ -1,4 +1,4 @@
-Property Binding es una tecnica con la cual puedes unir valores a propiedades de los elementos de un HTML
+Property Binding es una practica con la cual puedes atar valores o atributos  a propiedades de los elementos de un HTML
 cuando realizamos la union de propiedad de un valor estamos haciendo la union con el DOM (Document Objetc Model) y podemos hacer que las propiedades en vez de ser hardcode puedan ser dinamicas.
 
 1) crearemos la variable publica estado (boleano) y la iniciaremos en false.
