--- a/src/app/class-binding/class-binding.component.html
+++ b/src/app/class-binding/class-binding.component.html
@@ -1,3 +1,10 @@
+Al igual que property binding esta es una practica para atar valores o atributos a propiedades y aplicar estilos a los elementos HTML
+
+1) primero crearemos en la hoja de estilos unas clases para aplicar los siguientes estilos, color verde, rojo y cursiva.
+2) luego declararemos la variable "formato" en el TS y sera igual al atributo que deseamos aplicarle a nuestro elemento.
+3) declaramos la variable, "error", "especial" y "claseMensaje" para utilizar sus atributos con ngClass. 
+4) por ultimo declaramos la propiedad ngClass y le especificamos la clase mensaje para que se aplique la condicion basado en los estados de las variables.
+
 <h1 class="text-danger">Texto sin ClassBindig</h1>
 <h1 [class]="formato" >Texto con ClassBindig</h1>
 
