--- a/src/app/style-binding/style-binding.component.html
+++ b/src/app/style-binding/style-binding.component.html
@@ -1,4 +1,8 @@
+Al igual que property binding esta es una practica para atar valores o atributos a propiedades y aplicar estilos a los elementos HTML.
 
+1) creamos un titulo en el documento HTML y de forma directa le establecemos un estilo (hardcode).
+2) creamos un titulo en el documento HTML y establecemos que el estilo se aplique por medio de una condicion dependiendo del estado de una vaiable boleana.
+3) creamos un titulo y por medio de ngStyle atamos nuestro objeto con los atributos establecidos
 
 <h2 [style.color]="'orange'">Style Binding hard code</h2>
 <h2 [style.color]="error ? 'red' : 'green'">Style Binding2 condicionado por variable boleana</h2>
