--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -20,6 +20,9 @@
         <li class="nav-item">
           <a class="nav-link" href="style-binding">Style Binding</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="event-binding">Event Binding</a>
+        </li>
       </ul>
     </div>
   </nav>
