Template Reference Variables

--- a/src/app/event-binding/event-binding.component.html
+++ b/src/app/event-binding/event-binding.component.html
@@ -1,4 +1,13 @@
+Este ayudará a crear aplicaciones web interactivas con el flujo de datos del componente al elemento y del elemento al componente, ambos extremos.
 
+para esta practica creamos los siguientes botones.
+
+1) crear boton que llame el evento y muestre mensaje en la ventana.
+2) crear boton que llame el evento y muestre mensaje en la consola.
+3) crear boton que llame un evento y asigne el valor a una vaiable que se mostrara con la interpolacion.
+4) crear boton que llame un evento y muestre info del evento por consola.
+5) crear boton que llame un evento y muestre e tipo de evento.
+6) crear un boton que directamente asigne el valor a una variable que se mostrara con la interpolacion.
 
 <h1>Has clic en los botones</h1>
 
