--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -23,6 +23,11 @@
         <li class="nav-item">
           <a class="nav-link" href="event-binding">Event Binding</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="template-reference-variables">Template Reference Variables</a>
+        </li>
       </ul>
     </div>
   </nav>
+
+  
