Two Way Binding

--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="template-reference-variables">Template Reference Variables</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="two-way-binding">Two Way Binding</a>
+        </li>
       </ul>
     </div>
   </nav>
