--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link" href="ngif-directive">ngIf Directive</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ngswitch-directive">ngIf Directive</a>
+        </li>
       </ul>
     </div>
   </nav>
