--- a/src/app/ngswitch-directive/ngswitch-directive.component.html
+++ b/src/app/ngswitch-directive/ngswitch-directive.component.html
@@ -1,3 +1,11 @@
+ngSwitch: Permite ejecutar casos condicionales sobre elementos del DOM.
+
+1) Establecer la variable "color".
+2) establecer un div con la directiva ngSwitch estableciendo 3 casos de seleccion.
+3) establecer un caso por defecto en caso de que no se seleccione uno de los 3 casos.
+
+<br>
+
 <h1>Establece un color en el Ts para ver que condicion se aplica</h1>
 
 <div [ngSwitch]="color">
