--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -33,7 +33,10 @@
           <a class="nav-link" href="ngif-directive">ngIf Directive</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="ngswitch-directive">ngIf Directive</a>
+          <a class="nav-link" href="ngswitch-directive">ngSwitch Directive</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="ngfor-directive">ngFor Directive</a>
         </li>
       </ul>
     </div>
