--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -38,6 +38,9 @@
         <li class="nav-item">
           <a class="nav-link" href="ngfor-directive">ngFor Directive</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="component-interaction">Component Interaction</a>
+        </li>
       </ul>
     </div>
   </nav>
