--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -41,6 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="component-interaction">Component Interaction</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="pipes">Pipes</a>
+        </li>
       </ul>
     </div>
   </nav>
