--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -47,6 +47,9 @@
         <li class="nav-item">
           <a class="nav-link" href="services">Services</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="dependency-injection">Dependency Injection</a>
+        </li>
       </ul>
     </div>
   </nav>
