--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -50,6 +50,12 @@
         <li class="nav-item">
           <a class="nav-link" href="dependency-injection">Dependency Injection</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http-observables">Http and Observables</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="fetch-data">Fetch Data</a>
+        </li>
       </ul>
     </div>
   </nav>
