Wildcard Route and Redirecting Routes

--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -51,10 +51,22 @@
           <a class="nav-link" href="dependency-injection">Dependency Injection</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="http-observables">Http and Observables</a>
+          <a class="nav-link" href="http-observables">Using a Service</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="http-observables">Http and Observables</a>
+        </li>        
+        <li class="nav-item">
           <a class="nav-link" href="fetch-data">Fetch Data</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="http-observables">Http Error Handling</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">Routing and Navigation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">Wildcard Route and Redirecting Routes</a>
         </li>
       </ul>
     </div>
