--- a/src/app/routing-navigation/routing-navigation.component.html
+++ b/src/app/routing-navigation/routing-navigation.component.html
@@ -1,1 +1,30 @@
-<p>routing-navigation works!</p>
+<h1>Routing and Navigation</h1>
+El enrutador angular le permite mostrar diferentes componentes y datos al usuario según la ubicación del usuario en la aplicación. El enrutador permite la navegación de una vista a la siguiente a medida que los usuarios realizan tareas como las siguientes: Ingresar una URL en la barra de direcciones para navegar a la página correspondiente. Al hacer clic en los enlaces de la página para navegar a una nueva página. Al hacer clic en los botones Atrás y Adelante del navegador para navegar hacia atrás y adelante a través del historial del navegador.
+
+<h1>Wildcard Route and Redirecting Routes</h1>
+En cualquier aplicación angular, utilizamos enrutamiento para navegar de una vista a otra. ¿Qué sucede si no definimos una ruta determinada e intentamos navegar a esa ruta? Bueno, la aplicación Angular arroja un error. Entonces, tenemos que definir cuidadosamente el enrutador para la navegación. Podemos usar el enrutamiento comodín para definir la ruta. Con la ayuda de comodines, podemos realizar ciertas operaciones relacionadas con la definición de la ruta para una aplicación.
+
+1) para esto simplemente creamos un componente que va a cumplir con la funcion de ser la vista por defecto en caso de no encontrarse la ruta.
+2) luego agregamos en el ultimo lugar del "app-rounting-module.ts" la siguiente ruta  path: '**', component: NombreComponente  }" 
+3) para establecer nuestra ruta por defecto agregamos al principio de nuestas rutas   path: '', redirectTo: '', pathMatch: 'full' }";
+
+<h1>Route Parameters</h1>
+Los parámetros de ruta corresponden a las variables de ruta que usted define en la ruta. La URL que coincide con la ruta proporciona el productId. Angular usa el productId para mostrar los detalles de cada producto único.
+
+1) dentro de app-routing.module.ts crearemos nuestra ruta con un parametro.
+2) para pasar el parametro al navegar, primero injectamos en el constructor (private router: Router), importamos el servicio luego creamos un metodo en nuestro componente TS que se activara al hacer clic sobre el elemento (ruta) al cual vamos a navegar pasando asi el id.
+3) para leer el id (parametro) desde el componente al cual vamos a navegar primero escribimos dentro del constructor (private route: ActivatedRoute) e importamos el servicio, luego dentro del metodo onInit escribimos variableID = parseInt(this.route.snapshot.paramMap.get('id'));.
+4) luego mostramos la viariable en la vista utilizando la interpolacion.
+
+
+<h3>
+    Listado de Framworks
+</h3>
+
+<ul class="items">
+    <li (click)="onSelect(framework)" *ngFor="let framework of frameworks">
+        <span class="badge">{{framework.id}}</span> {{framework.nombre}}
+    </li>
+</ul>
+
+
