--- a/src/app/routing-navigation/detail/detail-page/detail-page.component.html
+++ b/src/app/routing-navigation/detail/detail-page/detail-page.component.html
@@ -1,2 +1,5 @@
 <h3>El id del framwork seleccionado es: {{frameworkId}} </h3>
 
+<a (click)="anterior()">Anterior</a>
+
+<a (click)="siguiente()">Siguiente</a>
