--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -71,6 +71,12 @@
         <li class="nav-item">
           <a class="nav-link" href="routing-navigation">Route Parameters</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">paramMap Observable</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">Optional Route Parameters</a>
+        </li>
       </ul>
     </div>
   </nav>
