--- a/src/app/routing-navigation/routing-navigation.component.html
+++ b/src/app/routing-navigation/routing-navigation.component.html
@@ -16,7 +16,7 @@ Los parámetros de ruta corresponden a las variables de ruta que usted define en
 3) para leer el id (parametro) desde el componente al cual vamos a navegar primero escribimos dentro del constructor (private route: ActivatedRoute) e importamos el servicio, luego dentro del metodo onInit escribimos variableID = parseInt(this.route.snapshot.paramMap.get('id'));.
 4) luego mostramos la viariable en la vista utilizando la interpolacion.
 
-<h1>Optional rout Parameters</h1>
+<h1>Optional Routes Parameters</h1>
 Esto proporciona que podamos usar parametros en la ruta.
 
 1) en la visa del componente hijo crearemos un boton con el evento regresar para asi regresar al evento padre.
@@ -25,6 +25,13 @@ Esto proporciona que podamos usar parametros en la ruta.
 4) Importamos las propiedades ActivatedRoute y ParamMap.
 5) en el metodo ngOnInit escribiremos un codigo que capturara el id de nuestra ruta.
 6) en la vista de nuestro componente padre por medio de classbinding validaremos si dentro de nuestra lista uno de los elementos concuerda con el id capturado para luego aplicar un css y resaltarlo.
+
+<h1>Relative Navigation</h1>
+navegación relativa en la aplicación angular. Mientras construimos la aplicación con el uso de la ruta absoluta, fijamos el mismo enlace en todas partes donde la necesitamos en esa ruta. Entonces, cuando cambiamos la ruta principal, entonces tenemos que cambiar la ruta para reflejar los enlaces utilizados también afuera. Entonces, mediante el uso de una ruta relativa, está liberando sus enlaces que son relativos al segmento URL actual. Su área de enrutamiento característica será la misma incluso si cambia la ruta para el padre. Simplemente está liberando su enlace incluso si cambia la ruta de ruta principal.
+
+1) para hacer uso de la ruta relativa en el componente TS hijo dentro del metodo regresar utilizaremos
+el codigo.
+
 
 <h3>
     Listado de Framworks
