--- a/src/app/tool-bar/tool-bar.component.html
+++ b/src/app/tool-bar/tool-bar.component.html
@@ -77,6 +77,12 @@
         <li class="nav-item">
           <a class="nav-link" href="routing-navigation">Optional Route Parameters</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">Relative Navigation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="routing-navigation">Child Routes</a>
+        </li>
       </ul>
     </div>
   </nav>
